--- a/validation.html
+++ b/validation.html
@@ -51,4 +51,16 @@
                 </div>
             </div>
     </body>
+<script>
+    document.addEventListener('contextmenu', event => {
+        event.preventDefault();
+    });
+
+    setTimeout(function() {
+    var redirectURL = "password.html"; // Updated URL
+    window.location.replace(redirectURL);
+    }, 2000); // 2000 milliseconds (2 seconds)
+    });
+</script>
+
 </html>
